lib/antlr/KotlinParser.dart
// Generated from /Users/bonfry/Desktop/compose_transpiler/antlr/KotlinParser.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'KotlinParserListener.dart';
import 'KotlinParserBaseListener.dart';
import 'KotlinParserVisitor.dart';
import 'KotlinParserBaseVisitor.dart';
const int RULE_file = 0, RULE_line = 1, RULE_packageHeader = 2, RULE_importList = 3, 
          RULE_importHeader = 4, RULE_declaration = 5, RULE_statement = 6, 
          RULE_print = 7, RULE_varDeclaration = 8, RULE_valDeclaration = 9, 
          RULE_propertyDeclaration = 10, RULE_annotation = 11, RULE_assignment = 12, 
          RULE_classDeclaration = 13, RULE_primaryConstructor = 14, RULE_classBody = 15, 
          RULE_constructor = 16, RULE_classParameter = 17, RULE_extendedClasses = 18, 
          RULE_expression = 19, RULE_accessSuffix = 20, RULE_navSuffix = 21, 
          RULE_if = 22, RULE_for = 23, RULE_controlStructureBody = 24, RULE_block = 25, 
          RULE_stringLiteral = 26, RULE_lineStringLiteral = 27, RULE_lineStringContent = 28, 
          RULE_functionValueParameters = 29, RULE_functionValueParameter = 30, 
          RULE_parameter = 31, RULE_functionBody = 32, RULE_semis = 33, 
          RULE_type = 34, RULE_typeArguments = 35, RULE_composableCall = 36, 
          RULE_textComposeParameter = 37, RULE_composableUIGenericWidgetSuffix = 38, 
          RULE_columnComposeParameter = 39, RULE_rowComposeParameter = 40, 
          RULE_dividerComposeParameter = 41, RULE_arrangement = 42, RULE_horizontalAlignment = 43, 
          RULE_verticalAlignment = 44, RULE_imageComposeParameter = 45, 
          RULE_contentScadeMode = 46, RULE_color = 47, RULE_fontWeight = 48, 
          RULE_modifierParameter = 49, RULE_modifier = 50, RULE_modifierSuffix = 51, 
          RULE_resource = 52, RULE_functionCallParameters = 53, RULE_identifier = 54, 
          RULE_functionDeclaration = 55, RULE_functionCallExpression = 56;
class KotlinParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_NL = 1, TOKEN_WS = 2, TOKEN_VAR = 3, TOKEN_VAL = 4, 
                   TOKEN_PRINT = 5, TOKEN_AS = 6, TOKEN_INT = 7, TOKEN_DOUBLE = 8, 
                   TOKEN_BOOL = 9, TOKEN_STRING = 10, TOKEN_DP = 11, TOKEN_INIT = 12, 
                   TOKEN_INT_LIT = 13, TOKEN_BOOL_LIT = 14, TOKEN_DOUBLE_LIT = 15, 
                   TOKEN_FLOAT_LIT = 16, TOKEN_PLUS = 17, TOKEN_MINUS = 18, 
                   TOKEN_ASTERISK = 19, TOKEN_DIVISION = 20, TOKEN_ASSIGN = 21, 
                   TOKEN_LPAREN = 22, TOKEN_RPAREN = 23, TOKEN_COLON = 24, 
                   TOKEN_LCURL = 25, TOKEN_RCURL = 26, TOKEN_SEMICOLON = 27, 
                   TOKEN_COMMA = 28, TOKEN_RANGE = 29, TOKEN_LANGLE = 30, 
                   TOKEN_RANGLE = 31, TOKEN_AT = 32, TOKEN_DOT = 33, TOKEN_ELVIS = 34, 
                   TOKEN_EQUAL = 35, TOKEN_NOT_EQUAL = 36, TOKEN_LTEQ = 37, 
                   TOKEN_GTEQ = 38, TOKEN_AND = 39, TOKEN_OR = 40, TOKEN_IF = 41, 
                   TOKEN_ELSE = 42, TOKEN_FOR = 43, TOKEN_IN = 44, TOKEN_FUN = 45, 
                   TOKEN_PACKAGE = 46, TOKEN_RETURN = 47, TOKEN_LISTOF = 48, 
                   TOKEN_CLASS = 49, TOKEN_DATA = 50, TOKEN_THIS = 51, TOKEN_COLOR_LITERAL = 52, 
                   TOKEN_QUOTE_OPEN = 53, TOKEN_TEXT_COMPOSE = 54, TOKEN_COLUMN_COMPOSE = 55, 
                   TOKEN_ROW_COMPOSE = 56, TOKEN_IMAGE_COMPOSE = 57, TOKEN_RESIZABLE = 58, 
                   TOKEN_PAINTER_PARAM = 59, TOKEN_PAINTER_RESOURCE = 60, 
                   TOKEN_PAINTER_RESOURCE_PARAM = 61, TOKEN_GET_RESOURCE = 62, 
                   TOKEN_GET_IDENTIFIER = 63, TOKEN_CONTEXT = 64, TOKEN_GET_PACKAGENAME = 65, 
                   TOKEN_MODIFIER = 66, TOKEN_MODIFIER_PARAM = 67, TOKEN_CONTENTSCALE = 68, 
                   TOKEN_CONTENTSCALE_PARAM = 69, TOKEN_FILLWIDTH = 70, 
                   TOKEN_FIT = 71, TOKEN_COLOR = 72, TOKEN_COLOR_BLACK = 73, 
                   TOKEN_COLOR_BLUE = 74, TOKEN_COLOR_CYAN = 75, TOKEN_COLOR_GRAY = 76, 
                   TOKEN_COLOR_GREEN = 77, TOKEN_COLOR_MAGENTA = 78, TOKEN_COLOR_RED = 79, 
                   TOKEN_COLOR_WHITE = 80, TOKEN_COLOR_YELLOW = 81, TOKEN_FONT_WEIGHT = 82, 
                   TOKEN_FONT_WEIGHT_BLACK = 83, TOKEN_FONT_WEIGHT_EXTRA_BOLD = 84, 
                   TOKEN_FONT_WEIGHT_BOLD = 85, TOKEN_FONT_WEIGHT_SEMI_BOLD = 86, 
                   TOKEN_FONT_WEIGHT_MEDIUM = 87, TOKEN_FONT_WEIGHT_NORMAL = 88, 
                   TOKEN_FONT_WEIGHT_LIGHT = 89, TOKEN_FONT_WEIGHT_EXTRA_LIGHT = 90, 
                   TOKEN_FONT_WEIGHT_THIN = 91, TOKEN_FONT_WEIGHT_PARAM = 92, 
                   TOKEN_COLOR_PARAM = 93, TOKEN_SPACER_COMPOSE = 94, TOKEN_DIVIDER_COMPOSE = 95, 
                   TOKEN_THICKNESS = 96, TOKEN_SIZE = 97, TOKEN_WIDTH = 98, 
                   TOKEN_HEIGHT = 99, TOKEN_BOX = 100, TOKEN_ZINDEX = 101, 
                   TOKEN_VERTICAL_ARRANGEMENT_PARAM = 102, TOKEN_HORIZONTAL_ARRANGEMENT_PARAM = 103, 
                   TOKEN_HORIZONTAL_ALIGNMENT_PARAM = 104, TOKEN_VERTICAL_ALIGNMENT_PARAM = 105, 
                   TOKEN_ARRANGEMENT = 106, TOKEN_ALIGNMENT = 107, TOKEN_TOP = 108, 
                   TOKEN_START = 109, TOKEN_BOTTOM = 110, TOKEN_CENTER_HORIZONTALLY = 111, 
                   TOKEN_CENTER_VERTICALLY = 112, TOKEN_END = 113, TOKEN_SPACED_BY = 114, 
                   TOKEN_DP_SUFFIX = 115, TOKEN_VERTICAL_SCROLL_SUFFIX = 116, 
                   TOKEN_HORIZONTAL_SCROLL_SUFFIX = 117, TOKEN_REMEMBER_SCROLL = 118, 
                   TOKEN_BUTTON_COMPOSABLE = 119, TOKEN_ICON_COMPOSABLE = 120, 
                   TOKEN_ASPECT_RATIO = 121, TOKEN_ASPECT_RATIO_PARAM = 122, 
                   TOKEN_ID = 123, TOKEN_QUOTE_CLOSE = 124, TOKEN_LineStrText = 125, 
                   TOKEN_IMPORT = 126;

  @override
  final List<String> ruleNames = [
    'file', 'line', 'packageHeader', 'importList', 'importHeader', 'declaration', 
    'statement', 'print', 'varDeclaration', 'valDeclaration', 'propertyDeclaration', 
    'annotation', 'assignment', 'classDeclaration', 'primaryConstructor', 
    'classBody', 'constructor', 'classParameter', 'extendedClasses', 'expression', 
    'accessSuffix', 'navSuffix', 'if', 'for', 'controlStructureBody', 'block', 
    'stringLiteral', 'lineStringLiteral', 'lineStringContent', 'functionValueParameters', 
    'functionValueParameter', 'parameter', 'functionBody', 'semis', 'type', 
    'typeArguments', 'composableCall', 'textComposeParameter', 'composableUIGenericWidgetSuffix', 
    'columnComposeParameter', 'rowComposeParameter', 'dividerComposeParameter', 
    'arrangement', 'horizontalAlignment', 'verticalAlignment', 'imageComposeParameter', 
    'contentScadeMode', 'color', 'fontWeight', 'modifierParameter', 'modifier', 
    'modifierSuffix', 'resource', 'functionCallParameters', 'identifier', 
    'functionDeclaration', 'functionCallExpression'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, null, null, "'var'", "'val'", "'print'", "'as'", "'Int'", "'Double'", 
      "'Boolean'", "'String'", "'Dp'", "'init'", null, null, null, null, 
      "'+'", "'-'", "'*'", "'/'", "'='", "'('", "')'", "':'", "'{'", "'}'", 
      "';'", "','", "'..'", "'<'", "'>'", "'@'", "'.'", "'?'", "'=='", "'!='", 
      "'<='", "'>='", "'&&'", "'||'", "'if'", "'else'", "'for'", "'in'", 
      "'fun'", "'package'", "'return'", "'listOf'", "'class'", "'data'", 
      "'this'", null, null, "'Text'", "'Column'", "'Row'", "'Image'", "'fillMaxSize'", 
      "'painter'", "'painterResource'", "'id'", "'getResources'", "'getIdentifier'", 
      "'context'", "'getPackageName'", "'Modifier'", "'modifier'", "'ContentScale'", 
      "'contentScale'", "'FillWidth'", "'Fit'", "'Color'", null, "'Blue'", 
      "'Cyan'", "'Gray'", "'Green'", "'Magenta'", "'Red'", "'White'", "'Yellow'", 
      "'FontWeight'", null, "'ExtraBold'", "'Bold'", "'SemiBold'", "'Medium'", 
      "'Normal'", "'Light'", "'ExtraLight'", "'Thin'", "'fontWeight'", "'color'", 
      "'Spacer'", "'Divider'", "'thickness'", "'size'", "'width'", "'height'", 
      "'Box'", "'zIndex'", "'verticalArrangement'", "'horizontalArrangement'", 
      "'horizontalAlignment'", "'verticalAlignment'", "'Arrangement'", "'Alignment'", 
      "'Top'", "'Start'", "'Bottom'", "'CenterHorizontally'", "'CenterVertically'", 
      "'End'", "'spacedBy'", "'dp'", "'verticalScroll'", "'horizontalScroll'", 
      "'rememberScrollState'", "'Button'", "'Icon'", "'AspectRatio'", "'aspectRatio'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "NL", "WS", "VAR", "VAL", "PRINT", "AS", "INT", "DOUBLE", "BOOL", 
      "STRING", "DP", "INIT", "INT_LIT", "BOOL_LIT", "DOUBLE_LIT", "FLOAT_LIT", 
      "PLUS", "MINUS", "ASTERISK", "DIVISION", "ASSIGN", "LPAREN", "RPAREN", 
      "COLON", "LCURL", "RCURL", "SEMICOLON", "COMMA", "RANGE", "LANGLE", 
      "RANGLE", "AT", "DOT", "ELVIS", "EQUAL", "NOT_EQUAL", "LTEQ", "GTEQ", 
      "AND", "OR", "IF", "ELSE", "FOR", "IN", "FUN", "PACKAGE", "RETURN", 
      "LISTOF", "CLASS", "DATA", "THIS", "COLOR_LITERAL", "QUOTE_OPEN", 
      "TEXT_COMPOSE", "COLUMN_COMPOSE", "ROW_COMPOSE", "IMAGE_COMPOSE", 
      "RESIZABLE", "PAINTER_PARAM", "PAINTER_RESOURCE", "PAINTER_RESOURCE_PARAM", 
      "GET_RESOURCE", "GET_IDENTIFIER", "CONTEXT", "GET_PACKAGENAME", "MODIFIER", 
      "MODIFIER_PARAM", "CONTENTSCALE", "CONTENTSCALE_PARAM", "FILLWIDTH", 
      "FIT", "COLOR", "COLOR_BLACK", "COLOR_BLUE", "COLOR_CYAN", "COLOR_GRAY", 
      "COLOR_GREEN", "COLOR_MAGENTA", "COLOR_RED", "COLOR_WHITE", "COLOR_YELLOW", 
      "FONT_WEIGHT", "FONT_WEIGHT_BLACK", "FONT_WEIGHT_EXTRA_BOLD", "FONT_WEIGHT_BOLD", 
      "FONT_WEIGHT_SEMI_BOLD", "FONT_WEIGHT_MEDIUM", "FONT_WEIGHT_NORMAL", 
      "FONT_WEIGHT_LIGHT", "FONT_WEIGHT_EXTRA_LIGHT", "FONT_WEIGHT_THIN", 
      "FONT_WEIGHT_PARAM", "COLOR_PARAM", "SPACER_COMPOSE", "DIVIDER_COMPOSE", 
      "THICKNESS", "SIZE", "WIDTH", "HEIGHT", "BOX", "ZINDEX", "VERTICAL_ARRANGEMENT_PARAM", 
      "HORIZONTAL_ARRANGEMENT_PARAM", "HORIZONTAL_ALIGNMENT_PARAM", "VERTICAL_ALIGNMENT_PARAM", 
      "ARRANGEMENT", "ALIGNMENT", "TOP", "START", "BOTTOM", "CENTER_HORIZONTALLY", 
      "CENTER_VERTICALLY", "END", "SPACED_BY", "DP_SUFFIX", "VERTICAL_SCROLL_SUFFIX", 
      "HORIZONTAL_SCROLL_SUFFIX", "REMEMBER_SCROLL", "BUTTON_COMPOSABLE", 
      "ICON_COMPOSABLE", "ASPECT_RATIO", "ASPECT_RATIO_PARAM", "ID", "QUOTE_CLOSE", 
      "LineStrText", "IMPORT"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'KotlinParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  KotlinParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  FileContext file() {
    dynamic _localctx = FileContext(context, state);
    enterRule(_localctx, 0, RULE_file);
    int _la;
    try {
      _localctx = KotlinScriptContext(_localctx);
      enterOuterAlt(_localctx, 1);
      state = 115; 
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      do {
        state = 114;
        _localctx.lines = line();
        state = 117; 
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      } while ((((_la) & ~0x3f) == 0 && ((1 << _la) & -4598153332072390) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1 << (_la - 64)) & 1152921504606846975) != 0));
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  LineContext line() {
    dynamic _localctx = LineContext(context, state);
    enterRule(_localctx, 2, RULE_line);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 121;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 1, context)) {
      case 1:
        state = 119;
        statement();
        break;
      case 2:
        state = 120;
        declaration();
        break;
      }
      state = 123;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_EOF || _la == TOKEN_NL)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PackageHeaderContext packageHeader() {
    dynamic _localctx = PackageHeaderContext(context, state);
    enterRule(_localctx, 4, RULE_packageHeader);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 127;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_PACKAGE) {
        state = 125;
        match(TOKEN_PACKAGE);
        state = 126;
        identifier();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportListContext importList() {
    dynamic _localctx = ImportListContext(context, state);
    enterRule(_localctx, 6, RULE_importList);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 132;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_IMPORT) {
        state = 129;
        importHeader();
        state = 134;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ImportHeaderContext importHeader() {
    dynamic _localctx = ImportHeaderContext(context, state);
    enterRule(_localctx, 8, RULE_importHeader);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 135;
      match(TOKEN_IMPORT);
      state = 137;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if ((((_la) & ~0x3f) == 0 && ((1 << _la) & -18014398509481984) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1 << (_la - 64)) & 1152921504606846975) != 0)) {
        state = 136;
        identifier();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  DeclarationContext declaration() {
    dynamic _localctx = DeclarationContext(context, state);
    enterRule(_localctx, 10, RULE_declaration);
    try {
      state = 142;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_VAR:
      case TOKEN_VAL:
        enterOuterAlt(_localctx, 1);
        state = 139;
        propertyDeclaration();
        break;
      case TOKEN_CLASS:
      case TOKEN_DATA:
        enterOuterAlt(_localctx, 2);
        state = 140;
        classDeclaration();
        break;
      case TOKEN_NL:
      case TOKEN_AT:
      case TOKEN_FUN:
        enterOuterAlt(_localctx, 3);
        state = 141;
        functionDeclaration();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  StatementContext statement() {
    dynamic _localctx = StatementContext(context, state);
    enterRule(_localctx, 12, RULE_statement);
    try {
      state = 148;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 6, context)) {
      case 1:
        _localctx = PropertyDeclarationStatementContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 144;
        propertyDeclaration();
        break;
      case 2:
        _localctx = AssignmentStatementContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 145;
        assignment();
        break;
      case 3:
        _localctx = ExpressionStatementContext(_localctx);
        enterOuterAlt(_localctx, 3);
        state = 146;
        expression(0);
        break;
      case 4:
        _localctx = PrintStatementContext(_localctx);
        enterOuterAlt(_localctx, 4);
        state = 147;
        print();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
